# morality-network

./: .gitignore  .gitmodules  .railwayignore  AGENTS.md  APPENDIX.md  CLAUDE.md  CONTRIBUTING.md  PDR.md  POST_MORTEM_TRADING_BOT.md  README.md  railway.json
.claude/: launch.json
.husky/: pre-commit
.netlify/: netlify.toml  state.json
contracts/: .env.example  SECURITY_AUDIT.md  foundry.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  BASE_HL_VAULT_BUILD_SPEC.md  CONTRIBUTING.md  DELIVERABLES_MASTER.md  DEPLOYMENTS.md  EXECUTION_PLAN.md  GITHUB_WORKFLOW.md  IPFS_IMAGE_MINTING_ARCHITECTURE.md  LAUNCH_HARDENING.md  NEXT_ACTIONS.md  OPEN_SOURCE_ROADMAP.md  POOTER_WORLD_ARCHITECTURE_REPORT.md  README.md  README_UPDATES_CHECKLIST.md  RUNBOOK_INDEXER.md  STATUS_LOG.md  STYLE_GUIDE.md  style-guide.html
extension/: README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  tsconfig.json
indexer/: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  ponder.config.ts  ponder.schema.ts  tsconfig.json
mobile/: app.json  index.ts  package-lock.json  package.json
sdk/: README.md  package.json
solana-programs/: Anchor.toml  Cargo.toml
solana-programs/programs/morality/: Cargo.toml
solana-programs/programs/morality/src/: errors.rs  events.rs  lib.rs  state.rs
solana-programs/programs/morality/src/instructions/: comments.rs  leaderboard.rs  mod.rs  ratings.rs  registry.rs  tipping.rs  zk_recovery.rs
web/: .vercelignore  README.md  knip.json  next.config.ts  package-lock.json  package.json  vercel.json  (+1 more)
(+789 files in other folders)
